feat(nudge): add native Wayland support via /dev/uinput FFM, CLI tools, and D-Bus